Update package.json and MainLayout.vue

--- a/src/package.json
+++ b/src/package.json
@@ -1,8 +1,8 @@
 {
   "name": "g-est",
   "version": "0.0.1",
-  "description": "G-est",
-  "productName": "G-est",
+  "description": "G-Est",
+  "productName": "G-Est",
   "author": "",
   "private": true,
   "scripts": {
